--- a/Feedbacksystem/templates/pages/hr_dashboard.html
+++ b/Feedbacksystem/templates/pages/hr_dashboard.html
@@ -117,11 +117,11 @@
 {% elif avg_rating >= 3.0 %}
     <h1 class="card-title mb-2" data-bs-toggle="tooltip" 
         data-bs-placement="bottom" 
-        title="Average rating based on student evaluations" style="color: #CC9900;">
+        title="Average rating based on student evaluations" style="color: #F0C808;">
         {{ avg_rating }}
         <h6 class="card-subtitle" data-bs-toggle="tooltip" 
             data-bs-placement="bottom" 
-            title="Overall performance is satisfactory based on the ratings received" style="color: #CC9900"><small>Satisfactory</small></h6>
+            title="Overall performance is satisfactory based on the ratings received" style="color: #F0C808"><small>Satisfactory</small></h6>
     </h1>
 {% elif avg_rating >= 2.0 %}
     <h1 class="card-title mb-2" data-bs-toggle="tooltip" 
