--- a/Feedbacksystem/templates/pages/stakeholderevaluations.html
+++ b/Feedbacksystem/templates/pages/stakeholderevaluations.html
@@ -95,7 +95,7 @@
               <td>
                 <span {% if i.average_rating >= 5.0 %} style="color: #339933;" 
                 {% elif i.average_rating >= 4.0 %} style="color: #66CC66;" 
-                {% elif i.average_rating >= 3.0 %} style="color: #997700;" 
+                {% elif i.average_rating >= 3.0 %} style="color: #F0C808;" 
                 {% elif i.average_rating >= 2.0 %} style="color: #FF9900;" 
                 {% elif i.average_rating >= 1.0 %} style="color: #cc0000;" 
                 {% endif %} > <b>{{ i.average_rating }} </b>
@@ -104,7 +104,7 @@
               <td>
                 <span {% if i.average_rating >= 5.0 %} style="color: #339933;" 
                 {% elif i.average_rating >= 4.0 %} style="color: #66CC66;" 
-                {% elif i.average_rating >= 3.0 %} style="color: #997700;" 
+                {% elif i.average_rating >= 3.0 %} style="color: #F0C808;" 
                 {% elif i.average_rating >= 2.0 %} style="color: #FF9900;" 
                 {% elif i.average_rating >= 1.0 %} style="color: #cc0000;" 
                 {% endif %}>
