--- a/Feedbacksystem/templates/pages/admin_faculty_evaluations.html
+++ b/Feedbacksystem/templates/pages/admin_faculty_evaluations.html
@@ -68,7 +68,7 @@
           <!-- Submit Button -->
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            <button type="submit" class="btn btn-primary">Send Report</button></div>
+            <button type="submit" class="btn btn-success">Send Report</button></div>
         </form>
       </div>
     </div>
