--- a/Feedbacksystem/templates/pages/facultydashboard_peer_to_peer.html
+++ b/Feedbacksystem/templates/pages/facultydashboard_peer_to_peer.html
@@ -305,13 +305,13 @@
         </form>
     </div>
   </div>
-  {% if faculty.email_sent == True and not is_filtered %}
-   <a href="{% url 'faculty_evaluations_individual_summary_report_pdf' %}" class="btn custom-btn mb-2"><i class="bi bi-clipboard2-fill"></i> View SET Summary Report</a> 
-   {% endif %}
+
+   <a href="{% url 'faculty_evaluations_individual_summary_report_pdf' %}" class="btn custom-btn mb-2"><i class="bi bi-clipboard2-fill"></i> View Peer-to-Peer Summary Report</a> 
+
    <div class="col-12 col-md-auto">
-    <a href="{% url 'facultydashboard_peer_to_peer' %}" class="btn custom-btn ">
+    <a href="{% url 'facultydashboard' %}" class="btn custom-btn ">
         <i class="bi bi-arrow-repeat" style="font-size: 16px; margin-right: 8px;"></i>
-        <span>Switch to Peer-to-Peer Data</span>
+        <span>Switch to SET Data</span>
     </a>
   </div>
 </div>
@@ -349,7 +349,7 @@
           </tr>
           {% endfor %}
       </table>
-      <a href="{% url 'facultyfeedbackandevaluations' %}">View all</a>
+      <a href="{% url 'peer_to_peer_evaluations' %}">View all</a>
       <script>
         document.addEventListener('DOMContentLoaded', function() {
             var ctx = document.getElementById('sentimentchart').getContext('2d');
