--- a/Feedbacksystem/templates/pages/facultyfeedbackandevaluations.html
+++ b/Feedbacksystem/templates/pages/facultyfeedbackandevaluations.html
@@ -6,6 +6,17 @@
 <div class="row">
     <div class="col-md-6">
       <h2>Student Feedback and Evaluations</h2>
+      <p style="margin: 0; padding: 0;"> Showing data from A.Y. {{request.GET.academic_year|default:current_academic_year}} 
+    {% if request.GET.semester %}
+        <!-- Semester is explicitly provided -->
+        {{ request.GET.semester }}
+    {% elif request.GET.semester == "" %}
+        <!-- Semester is blank; show all data -->
+        All Semesters
+    {% else %}
+        <!-- No semester provided; default to current semester -->
+        {{ current_semester }}
+    {% endif %} </p>
     </div>
     <div class="col-lg-5 col-md-5 mt-1 evaluations_search" style="margin-left: auto;">
       <form method="get" action="" class="d-flex" style="gap: 1em;">
@@ -23,7 +34,7 @@
     <!-- Filter Options Button -->
     <div class="col-lg-2 col-md-3 col-sm-4 col-12 mb-1">
       <button type="button" class="btn btn-warning custom-btn" data-bs-toggle="modal" data-bs-target="#exampleModal">
-        <i class="bi bi-pencil-square"></i> <b>Filter Options</b>
+        <i class="bi bi-pencil-square"></i> Filter Options
       </button>
     </div>
     
@@ -33,21 +44,20 @@
         <option value="" id="placeholder" disabled selected hidden>Sort</option>
         <option id="average_rating" value="average_rating">Average Rating: Ascending</option>
         <option id="-average_rating" value="-average_rating">Average Rating: Descending</option>
-        <option id="created" value="created">Date Submitted: Ascending</option>
-        <option id="-created" value="-created">Date Submitted: Descending</option>
       </select>
     </div>
   
-    {% if evaluation_status == "In Progress" %}
+    {% if faculty.email_sent == True and not is_filtered %}
     <div class="col-lg-4 col-md-2">
-        <a href="{% url 'faculty_evaluations_excel' %}?{{ request.GET.urlencode }}" class="btn btn-success"><i class="bi bi-file-earmark-excel-fill"></i>Export as Excel File</a>
+        <a href="{% url 'faculty_evaluations_excel' %}?{{ request.GET.urlencode }}" class="btn btn-success"><i class="bi bi-file-earmark-excel-fill"></i> Export as Excel File</a>
     </div>
     {% endif %}
     
   </div>
-    <div class="table-responsive">
+    <div class="table-responsive mt-2">
         <table class="table table-bordered ">
             <tr>
+                <th scope="col">#</th>
                 <th scope="col">Subject</th>
                 <th scope="col">Average</th>
                 <th scope="col">Rating</th>
@@ -60,17 +70,40 @@
             
             {% for i in teacher_evaluations %}
             <tr>
+              <td>{{ forloop.counter|add:page_obj.start_index|add:"-1" }}</td>
                 <td>{{ i.section_subject_faculty.subjects }} </td>
-                <td>{{ i.average_rating }}</td>
-                <td>{{ i.get_rating_category }}</td>
+                <td>
+                  <span {% if i.average_rating >= 5.0 %} style="color: #339933;" 
+                  {% elif i.average_rating >= 4.0 %} style="color: #66CC66;" 
+                  {% elif i.average_rating >= 3.0 %} style="color: #F0C808;" 
+                  {% elif i.average_rating >= 2.0 %} style="color: #FF9900;" 
+                  {% elif i.average_rating >= 1.0 %} style="color: #cc0000;" 
+                  {% endif %} > <b>{{ i.average_rating }} </b>
+              </span>
+              </td>
+              <td>
+                <span {% if i.average_rating >= 5.0 %} style="color: #339933;" 
+                {% elif i.average_rating >= 4.0 %} style="color: #66CC66;" 
+                {% elif i.average_rating >= 3.0 %} style="color: #F0C808;" 
+                {% elif i.average_rating >= 2.0 %} style="color: #FF9900;" 
+                {% elif i.average_rating >= 1.0 %} style="color: #cc0000;" 
+                {% endif %}>
+                <b>{{ i.get_rating_category }}</b></span>
+              </td>
                 <td>{{ i.comments|truncatechars:50 }}</td>
-                <td>{{ i.predicted_sentiment }}</td>
+                <td>
+                  <span {% if i.predicted_sentiment == 'Positive'%} style="color: #339933;" 
+                      {% elif i.predicted_sentiment == 'Negative' %} style="color:  #cc0000;" 
+                      {% endif %}>
+                  <b>{{ i.predicted_sentiment }}</b>
+                    </span>
+                </td>
                 <td>{{ i.academic_year }}</td>
                 <td>{{ i.semester }}</td>
                 <td>
                     <a href="{% url 'view_evaluation_form' i.pk %}" style=" text-decoration: none;">
-                        <button class="btn btn-primary d-flex align-items-center">
-                          <i class="bi bi-eye-fill" style="font-size:16px; "></i></button></a>
+                        <button class="btn btn-primary ">
+                          <i class="bi bi-eye-fill"></i></button></a>
             
                     </td>
             </tr>
