--- a/Feedbacksystem/templates/pages/peer_to_peer_evaluations.html
+++ b/Feedbacksystem/templates/pages/peer_to_peer_evaluations.html
@@ -23,7 +23,7 @@
     <!-- Filter Options Button -->
     <div class="col-lg-2 col-md-3 col-sm-4 col-12 mb-1">
       <button type="button" class="btn btn-warning custom-btn" data-bs-toggle="modal" data-bs-target="#exampleModal">
-        <i class="bi bi-pencil-square"></i> <b>Filter Options</b>
+        <i class="bi bi-pencil-square"></i> Filter Options
       </button>
     </div>
     
@@ -33,19 +33,18 @@
         <option value="" id="placeholder" disabled selected hidden>Sort</option>
         <option id="average_rating" value="average_rating">Average Rating: Ascending</option>
         <option id="-average_rating" value="-average_rating">Average Rating: Descending</option>
-        <option id="created" value="created">Date Submitted: Ascending</option>
-        <option id="-created" value="-created">Date Submitted: Descending</option>
       </select>
     </div>
   
     <!-- Search Form and Export Button -->
     <div class="col-lg-4 col-md-2">
-      <a href="{% url 'peer_to_peer_evaluations_csv' %}?{{ request.GET.urlencode }}" class="btn btn-primary">Export CSV</a>
+      <a href="{% url 'peer_to_peer_evaluations_csv' %}?{{ request.GET.urlencode }}" class="btn custom-btn">Export CSV</a>
     </div>
   </div>
     <div class="table-responsive">
         <table class="table table-bordered ">
             <tr>
+                <th scope="col">#</th>
                 <th scope="col">Average</th>
                 <th scope="col">Rating</th>
                 <th scope="col">Overall Impression</th>
@@ -57,16 +56,39 @@
             
             {% for i in peer_to_peer_evaluations %}
             <tr>
-                <td>{{ i.average_rating }}</td>
-                <td>{{ i.get_rating_category }}</td>
+              <td>{{ forloop.counter|add:page_obj.start_index|add:"-1" }}</td>
+                <td>
+                  <span {% if i.average_rating >= 5.0 %} style="color: #339933;" 
+                  {% elif i.average_rating >= 4.0 %} style="color: #66CC66;" 
+                  {% elif i.average_rating >= 3.0 %} style="color: #F0C808;" 
+                  {% elif i.average_rating >= 2.0 %} style="color: #FF9900;" 
+                  {% elif i.average_rating >= 1.0 %} style="color: #cc0000;" 
+                  {% endif %} > <b>{{ i.average_rating }} </b>
+              </span>
+              </td>
+              <td>
+                <span {% if i.average_rating >= 5.0 %} style="color: #339933;" 
+                {% elif i.average_rating >= 4.0 %} style="color: #66CC66;" 
+                {% elif i.average_rating >= 3.0 %} style="color: #F0C808;" 
+                {% elif i.average_rating >= 2.0 %} style="color: #FF9900;" 
+                {% elif i.average_rating >= 1.0 %} style="color: #cc0000;" 
+                {% endif %}>
+                <b>{{ i.get_rating_category }}</b></span>
+              </td>
                 <td>{{ i.comments }}</td>
-                <td>{{ i.predicted_sentiment }}</td>
+                <td>
+                  <span {% if i.predicted_sentiment == 'Positive'%} style="color: #339933;" 
+                      {% elif i.predicted_sentiment == 'Negative' %} style="color:  #cc0000;" 
+                      {% endif %}>
+                  <b>{{ i.predicted_sentiment }}</b>
+                    </span>
+                </td>
                 <td>{{ i.academic_year }}</td>
                 <td>{{ i.semester }}</td>
                 <td>
-                    <a href="{% url 'view_peer_to_peer_evaluation_form' i.pk %}" style=" text-decoration: none;">
-                        <button class="btn btn-primary d-flex align-items-center" style=" padding:1px 2px 1px 7px">
-                          <i class="bi bi-eye-fill" style="font-size:20px; margin-right: 5px;"></i></button></a>
+                    <a href="{% url 'view_peer_to_peer_evaluation_form' i.pk %}">
+                        <button class="btn btn-primary d-flex align-items-center">
+                          <i class="bi bi-eye-fill"></i></button></a>
             
                     </td>
             </tr>
